ProductInventory/src/objects/Product_Info__c.object
<CustomObject>
    <fields>
        <fullName>product_quantity__c</fullName>
        <label>product_quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>purchase_price__c</fullName>
        <label>purchase_price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sale_price__c</fullName>
        <label>sale_price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product_Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product_Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sales_p_geater_purchase_p</fullName>
        <active>true</active>
        <description>sales price always greater then purchase price</description>
        <errorConditionFormula>sale_price__c &lt;= purchase_price__c</errorConditionFormula>
        <errorDisplayField>sale_price__c</errorDisplayField>
        <errorMessage>Sales price must be greater then purchase price</errorMessage>
    </validationRules>
</CustomObject>